--- a/Sub_list.html
+++ b/Sub_list.html
@@ -90,7 +90,9 @@
                                         <td>관리자</td>
                                         <td>2021. 10. 26</td>
                                         <td>32</td>
-                                        <td></td>
+                                        <td>
+                                            <button type="button" class="ico-btn-clip">파일</button>
+                                        </td>
                                     </tr>
                                 </tbody>
                                 <tbody>
@@ -100,7 +102,9 @@
                                         <td>관리자</td>
                                         <td>2019. 01. 21</td>
                                         <td>21</td>
-                                        <td></td>
+                                        <td>
+                                            <button type="button" class="ico-btn-clip">파일</button>
+                                        </td>
                                     </tr>
                                 </tbody>
                                 <tbody>
@@ -110,7 +114,9 @@
                                         <td>관리자</td>
                                         <td>2021. 10. 26</td>
                                         <td>32</td>
-                                        <td></td>
+                                        <td>
+                                            <button type="button" class="ico-btn-clip">파일</button>
+                                        </td>
                                     </tr>
                                 </tbody>
                                 <tbody>
@@ -120,7 +126,9 @@
                                         <td>관리자</td>
                                         <td>2019. 01. 21</td>
                                         <td>21</td>
-                                        <td></td>
+                                        <td>
+                                            <button type="button" class="ico-btn-clip">파일</button>
+                                        </td>
                                     </tr>
                                 </tbody>
                             </table>
