--- a/sub_4_2_list.html
+++ b/sub_4_2_list.html
@@ -105,7 +105,9 @@
                                         <td>동물상</td>
                                         <td>동물상 조사값</td>
                                         <td>2021. 10. 25</td>
-                                        <td>수정</td>
+                                        <td>
+                                            <button type="button" class="btn-c-gray2 btn-sm">수정</button>
+                                        </td>
                                     </tr>
                                 </tbody>
                                 <tbody>
@@ -115,7 +117,9 @@
                                         <td>식물상</td>
                                         <td>식물상 조사값</td>
                                         <td>2021. 01. 25</td>
-                                        <td>수정</td>
+                                        <td>
+                                            <button type="button" class="btn-c-gray2 btn-sm">수정</button>
+                                        </td>
                                     </tr>
                                 </tbody>
                                 <tbody>
@@ -125,7 +129,9 @@
                                         <td>기상</td>
                                         <td>기온, 강수량, 습도 등과 같은 기상 조사값</td>
                                         <td>2021. 12. 01</td>
-                                        <td>수정</td>
+                                        <td>
+                                            <button type="button" class="btn-c-gray2 btn-sm">수정</button>
+                                        </td>
                                     </tr>
                                 </tbody>
                                 <tbody>
@@ -135,7 +141,9 @@
                                         <td>대기질</td>
                                         <td>PM-2.5,SO2와 같은 대기 오염물질 발생량</td>
                                         <td>2021. 02. 04</td>
-                                        <td>수정</td>
+                                        <td>
+                                            <button type="button" class="btn-c-gray2 btn-sm">수정</button>
+                                        </td>
                                     </tr>
                                 </tbody>
                                 <tbody>
@@ -145,7 +153,9 @@
                                         <td>온실가스</td>
                                         <td>이산화탄소, 메탄등과 같은 온실가스 발생량</td>
                                         <td>2022. 02. 04</td>
-                                        <td>수정</td>
+                                        <td>
+                                            <button type="button" class="btn-c-gray2 btn-sm">수정</button>
+                                        </td>
                                     </tr>
                                 </tbody>
                                 <tbody>
@@ -155,7 +165,9 @@
                                         <td>수질</td>
                                         <td>수은, 유기인, 납 등과 같은 수질 조사값</td>
                                         <td>2022. 02. 04</td>
-                                        <td>수정</td>
+                                        <td>
+                                            <button type="button" class="btn-c-gray2 btn-sm">수정</button>
+                                        </td>
                                     </tr>
                                 </tbody>
                                 <tbody>
@@ -165,7 +177,9 @@
                                         <td>지질</td>
                                         <td>지질 조사값</td>
                                         <td>2022. 02. 04</td>
-                                        <td>수정</td>
+                                        <td>
+                                            <button type="button" class="btn-c-gray2 btn-sm">수정</button>
+                                        </td>
                                     </tr>
                                 </tbody>
                                 
