--- a/sub_1.html
+++ b/sub_1.html
@@ -78,13 +78,29 @@
                             <input type="text" class="form-control form-srch" value="검색어를 입력해주세요." />
                             <button type="button" class="btn-c-wb">조회</button>
                         </div>
+                        <div class="row col-12 justify-content-between align-items-center">
+                            <div class="col-2">
+                                <span class="sort-title">조회결과 (5건)</span>
+                            </div>
+                            <div class="row justify-content-end col-6">
+                                <div class="col-4">
+                                    <select class="form-control form-data-set">
+                                        <option>권한바꾸기</option>
+                                        <option>권한바꾸기</option>
+                                        <option>권한바꾸기</option>
+                                    </select>
+                                </div>
+                                <div class="col-3 pl0">
+                                    <button type="button" class="btn-c-wb btn-middle pa5">권한부여</button>
+                                </div>
+                            </div>
+                        </div>
                         <!--//srch-wrp -->
                         <!-- tbl-wrp -->
                         <div class="tbl-wrp tbl-list">
                             <table>
                                 <thead>
                                     <tr>
-                                        <th scope="col"></th>
                                         <th scope="col">NO</th>
                                         <th scope="col">이름</th>
                                         <th scope="col">아이디</th>
@@ -97,9 +113,15 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">
-                                            <label><input type="checkbox" name="color" value="title"></label>
+                                            <ul>
+                                                <li>
+                                                    <label for="list01" class="label-input-checkbox mb0">
+                                                        <input type="checkbox" id="list01">
+                                                        <span class="input-txt blk">01</span>
+                                                    </label>
+                                                </li>
+                                            </ul>
                                         </th>
-                                        <th>01</th>
                                         <td>이대교</td>
                                         <td>root</td>
                                         <td>(주)이쓰리</td>
@@ -111,9 +133,15 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">
-                                            <label><input type="checkbox" name="color" value="title"></label>
+                                            <ul>
+                                                <li>
+                                                    <label for="list02" class="label-input-checkbox mb0">
+                                                        <input type="checkbox" id="list02">
+                                                        <span class="input-txt blk">02</span>
+                                                    </label>
+                                                </li>
+                                            </ul>
                                         </th>
-                                        <th>02</th>
                                         <td>이대교</td>
                                         <td>e3124</td>
                                         <td>(주)이쓰리</td>
@@ -125,9 +153,15 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">
-                                            <label><input type="checkbox" name="color" value="title"></label>
+                                            <ul>
+                                                <li>
+                                                    <label for="list03" class="label-input-checkbox mb0">
+                                                        <input type="checkbox" id="list03">
+                                                        <span class="input-txt blk">03</span>
+                                                    </label>
+                                                </li>
+                                            </ul>
                                         </th>
-                                        <th>03</th>
                                         <td>이대교</td>
                                         <td>root</td>
                                         <td>(주)이쓰리</td>
@@ -139,9 +173,15 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">
-                                            <label><input type="checkbox" name="color" value="title"></label>
+                                            <ul>
+                                                <li>
+                                                    <label for="list04" class="label-input-checkbox mb0">
+                                                        <input type="checkbox" id="list04">
+                                                        <span class="input-txt blk">04</span>
+                                                    </label>
+                                                </li>
+                                            </ul>
                                         </th>
-                                        <th>04</th>
                                         <td>이대교</td>
                                         <td>root</td>
                                         <td>(주)이쓰리</td>
@@ -153,9 +193,15 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">
-                                            <label><input type="checkbox" name="color" value="title"></label>
+                                            <ul>
+                                                <li>
+                                                    <label for="list06" class="label-input-checkbox mb0">
+                                                        <input type="checkbox" id="list06">
+                                                        <span class="input-txt blk">06</span>
+                                                    </label>
+                                                </li>
+                                            </ul>
                                         </th>
-                                        <th>06</th>
                                         <td>이대교</td>
                                         <td>root</td>
                                         <td>(주)이쓰리</td>
