--- a/sub_2.html
+++ b/sub_2.html
@@ -68,11 +68,26 @@
                     <h2 class="page-title">공지사항 관리</h2>
                         <!-- srch-wrp -->
                         <div class="srch-wrp">
-                            <td>
-                                <label><input type="checkbox" name="color" value="title">제목</label>
-                                <label><input type="checkbox" name="color" value="red">내용</label>
-                                <label><input type="checkbox" name="color" value="red">작성자</label>
-                            </td>
+                            <ul class="row">
+                                <li>
+                                    <label for="list01" class="label-input-checkbox mb0">
+                                        <input type="checkbox" id="list01">
+                                        <span class="input-txt blk">제목</span>
+                                    </label>
+                                </li>
+                                <li class="ml10">
+                                    <label for="list02" class="label-input-checkbox mb0">
+                                        <input type="checkbox" id="list02">
+                                        <span class="input-txt blk">내용</span>
+                                    </label>
+                                </li>
+                                <li class="ml10">
+                                    <label for="list03" class="label-input-checkbox mb0">
+                                        <input type="checkbox" id="list03">
+                                        <span class="input-txt blk">작성자</span>
+                                    </label>
+                                </li>
+                            </ul>
                             <input type="text" class="form-control form-srch" value="검색어를 입력해주세요." />
                             <button type="button" class="btn-c-wb">조회</button>
                         </div>
@@ -96,7 +111,9 @@
                                         <td>유니슨, 태백 가덕산 풍력에 4MW급 중대형 터빈 공급</td>
                                         <td>관리자</td>
                                         <td>2021. 10. 26</td>
-                                        <td></td>
+                                        <td>
+                                            <button type="button" class="ico-btn-clip">파일</button>
+                                        </td>
                                         <td>32</td>
                                     </tr>
                                 </tbody>
@@ -106,7 +123,9 @@
                                         <td>제주 상명풍력조사</td>
                                         <td>관리자</td>
                                         <td>2021. 10. 26</td>
-                                        <td></td>
+                                        <td>
+                                            <button type="button" class="ico-btn-clip">파일</button>
+                                        </td>
                                         <td>21</td>
                                     </tr>
                                 </tbody>
