--- a/login.html
+++ b/login.html
@@ -35,18 +35,20 @@
         <div id="container">
             <!-- login-wrp -->
             <div class="login-wrp">
-                <h2 class="wrp-title">회원 로그인</h2>
-                <div class="input-wrp row">
-                    <input type="text" placeholder="아이디" class="form-control" />
-                    <input type="password" placeholder="비밀번호" class="form-control" />
-                </div>
-                <div class="btn-area text-right find-btn-area">
-                    <button type="button" class="btn-txt">아이디 찾기</button>
-                    <button type="button" class="btn-txt">비밀번호 찾기</button>
-                </div>
-                <div class="btn-area col-12">
-                    <button type="button" class="btn-c-darkblue btn-login col-12">로그인</button>
-                    <button type="button" class="btn-c-wb btn-login col-12">회원가입</button>
+                <div class="login-inner">
+                    <h2 class="wrp-title">회원 로그인</h2>
+                    <div class="input-wrp row">
+                        <input type="text" placeholder="아이디" class="form-control" />
+                        <input type="password" placeholder="비밀번호" class="form-control" />
+                    </div>
+                    <div class="btn-area text-right find-btn-area">
+                        <button type="button" class="btn-txt">아이디 찾기</button>
+                        <button type="button" class="btn-txt">비밀번호 찾기</button>
+                    </div>
+                    <div class="btn-area col-12">
+                        <button type="button" class="btn-c-darkblue btn-login col-12">로그인</button>
+                        <button type="button" class="btn-c-wb btn-login col-12">회원가입</button>
+                    </div>
                 </div>
             </div>
             <!--//login-wrp -->
