--- a/login_find_id.html
+++ b/login_find_id.html
@@ -37,16 +37,18 @@
         <div id="container">
             <!-- login-wrp -->
             <div class="login-wrp row">
-                <h2 class="wrp-title">아이디 찾기</h2>
-                <div class="input-wrp row">
-                    <input type="text" placeholder="이름" class="form-control" />
-                    <input type="password" placeholder="이메일" class="form-control" />
-                </div>
-                <div class="btn-area mt20">
-                    <button type="button" class="btn-c-darkblue btn-login col-12">확인</button>
-                </div>
-                <div class="row notice-wrp mt20">
-                    <i class="icon-min-notice"></i><span class="col">이미 사용 중인 아이디입니다. 사용하실 다른 아이디를 입력하여 주십시오.</span>
+                <div class="login-inner">
+                    <h2 class="wrp-title">아이디 찾기</h2>
+                    <div class="input-wrp row">
+                        <input type="text" placeholder="이름" class="form-control" />
+                        <input type="password" placeholder="이메일" class="form-control" />
+                    </div>
+                    <div class="btn-area mt20">
+                        <button type="button" class="btn-c-darkblue btn-login col-12">확인</button>
+                    </div>
+                    <div class="row notice-wrp mt20">
+                        <i class="icon-min-notice"></i><span class="col">이미 사용 중인 아이디입니다. 사용하실 다른 아이디를 입력하여 주십시오.</span>
+                    </div>
                 </div>
             </div>
             <!--//login-wrp -->
