--- a/login_find_pw.html
+++ b/login_find_pw.html
@@ -37,17 +37,19 @@
         <div id="container">
             <!-- login-wrp -->
             <div class="login-wrp">
-                <h2 class="wrp-title">비밀번호 찾기</h2>
-                <div class="input-wrp row">
-                    <input type="text" placeholder="admin" class="form-control" />
-                    <input type="name" placeholder="관리자" class="form-control" />
-                    <input type="e-mail" placeholder="admin@gmail.com" class="form-control" />
-                </div>
-                <div class="btn-area mt20">
-                    <button type="button" class="btn-c-darkblue btn-login col-12">확인</button>
-                </div>
-                <div class="row notice-wrp mt20">
-                    <i class="icon-min-notice"></i><span class="col">관리자님의 새로운 비밀번호를 등록된 이메일로 보내드렸습니다.</span>
+                <div class="login-inner">
+                    <h2 class="wrp-title">비밀번호 찾기</h2>
+                    <div class="input-wrp row">
+                        <input type="text" placeholder="admin" class="form-control" />
+                        <input type="name" placeholder="관리자" class="form-control" />
+                        <input type="e-mail" placeholder="admin@gmail.com" class="form-control" />
+                    </div>
+                    <div class="btn-area mt20">
+                        <button type="button" class="btn-c-darkblue btn-login col-12">확인</button>
+                    </div>
+                    <div class="row notice-wrp mt20">
+                        <i class="icon-min-notice"></i><span class="col">관리자님의 새로운 비밀번호를 등록된 이메일로 보내드렸습니다.</span>
+                    </div>
                 </div>
             </div>    
         </div>
