--- a/sub_1_3.html
+++ b/sub_1_3.html
@@ -57,9 +57,9 @@
                     <div class="col-2">
                         <!-- lnb -->
                         <div class="lnb">
-                            <!-- srch business -->v
+                            <!-- srch business -->
                             <div class="srch-business">
-                                <h2 class="page-title">평가분야</h2>
+                                <h2 class="page-title">사업검색</h2>
                                 <div class="tab-wrp type-btn">
                                     <ul class="tab row">
                                         <li class="col-6">
