--- a/sub_2_2_2.html
+++ b/sub_2_2_2.html
@@ -152,7 +152,51 @@
                                     </div>
                                 </div>
                                 <!--//list-box -->
-
+                                <div class="fold-wrp">
+                                    <div class="address-srch">
+                                        <input type="text" class="form-control form-large" placeholder="검색어를 입력해주세요." />
+                                        <button type="button" class="ico-btn-srch">검색</button>
+                                    </div> <!--//address srch -->
+                                    <div class="address-list">
+                                        <ul>
+                                            <li>
+                                                <div class="col-10 txt-area">강원도 태백시 원동 산 97</div>
+                                                <div class="col-2 btn-area">
+                                                    <button type="button" class="btn-c-wb btn-tiny">담기</button>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="col-10 txt-area">강원도 태백시 원동 산 97-1</div>
+                                                <div class="col-2 btn-area">
+                                                    <button type="button" class="btn-c-wb btn-tiny">담기</button>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="col-10 txt-area">강원도 태백시 원동 산 97-2</div>
+                                                <div class="col-2 btn-area">
+                                                    <button type="button" class="btn-c-wb btn-tiny">담기</button>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </div> <!--//address list -->
+                                    <div class="opcity-area mt15 mb15">
+                                        <span class="fold-title">버퍼/투명도 설정</span>
+                                        <div class="row align-items-center mt10">
+                                            <div class="col-6">
+                                                <div class="row align-items-center">
+                                                    <input type="text" class="form-control form-opacity" value="300"/>
+                                                    <span>m</span>
+                                                </div>
+                                            </div>
+                                            <div class="col-6">
+                                                <form>
+                                                    <input type="range" class="opcity-range" id="opacity_bar">
+                                                    
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <!-- list-box -->
                                 <div class="list-box">
                                     <div class="row">
