--- a/sub_admin_2_edit.html
+++ b/sub_admin_2_edit.html
@@ -173,7 +173,7 @@
         <!--//container -->
 
         <!-- alertComn -->
-        <div class="modal fade" id="alertComn">
+        <div class="modal fade alert-wrp" id="alertComn">
             <div class="modal-dialog modal-sm modal-dialog-centered">
                 <div class="modal-content">
                     <p class="msg-center">
