--- a/sub_1.html
+++ b/sub_1.html
@@ -78,20 +78,20 @@
                             <input type="text" class="form-control form-srch" value="검색어를 입력해주세요." />
                             <button type="button" class="btn-c-wb">조회</button>
                         </div>
-                        <div class="row col-12 justify-content-between align-items-center">
+                        <div class="srch-wrp justify-content-between align-items-center">
                             <div class="col-2">
                                 <span class="sort-title">조회결과 (5건)</span>
                             </div>
-                            <div class="row justify-content-end col-6">
-                                <div class="col-4">
+                            <div class="row justify-content-end">
+                                <div class="col-7">
                                     <select class="form-control form-data-set">
                                         <option>권한바꾸기</option>
                                         <option>권한바꾸기</option>
                                         <option>권한바꾸기</option>
                                     </select>
                                 </div>
-                                <div class="col-3 pl0">
-                                    <button type="button" class="btn-c-wb btn-middle pa5">권한부여</button>
+                                <div class="col-5">
+                                    <button type="button" class="btn-c-wb sky">권한부여</button>
                                 </div>
                             </div>
                         </div>
