--- a/join.html
+++ b/join.html
@@ -8,7 +8,7 @@
         <link type="text/css" rel="stylesheet" href="./css/common.css">
         <link type="text/css" rel="stylesheet" href="./css/sub.css">
     </head>
-    <body>
+    <body class="bg-gray">
         <header>
             <!--header-wrp -->
             <div class="header-wrp">
@@ -74,7 +74,7 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="row col-12 pl0 pr0 justify-content-between">
+                        <div class="row col-12 pl0 pr0 justify-content-between align-items-center mt20">
                             <span class="sort-title">이메일 수신여부</span>
                             <div class="order-last">
                                 <label class="label-input-radio">
@@ -87,10 +87,10 @@
                                 </lable>
                             </div>
                         </div>
-                        
                     </div>
-                    <div class="btn-area col-12">
-                        <button type="button" class="btn-c-darkblue btn-login col-12">로그인</button>
+                    <div class="btn-area col-12 mt50 text-center">
+                        <button type="button" class="btn-c-darkblue btn-login col-12">가입하기</button>
+                        <button type="button" class="btn-txt-underline mt25">이전으로 돌아가기</button>
                     </div>
                 </div>
             </div>
@@ -111,10 +111,10 @@
                         </p>
                         <div class="row btn-area col-12 mt20">
                             <div class="col-8 pr0">
-                                <input type="text" placeholder="아이디" class="form-control" />
+                                <input type="text" placeholder="아이디" class="form-control form-large" />
                             </div>
                             <div class="col-4 pl10">
-                                <button type="button" class="btn-sm btn-c-wb" data-bs-toggle="modal" data-bs-target="#overlapPop">중복확인</button>
+                                <button type="button" class="btn-sm btn-c-wb btn-large" data-bs-toggle="modal" data-bs-target="#overlapPop">중복확인</button>
                             </div>
                         </div>
                         <div class="row notice-wrp mt20">
