--- a/sub_1_2_2.html
+++ b/sub_1_2_2.html
@@ -67,7 +67,7 @@
                 <section class="content">
                     <h2 class="page-title">모니터링 정보 목록</h2>
                         <!-- srch-wrp -->
-                        <div class="srch-wrp bg-gray">
+                        <div class="srch-wrp bg-gray mb15">
                             <label class="srch-title">검색어</label>
                             <select class="form-control form-data-set">
                                 <option>데이터셋명</option>
@@ -157,10 +157,10 @@
                                 <li class="pager-first"><a>first</a></li>
                                 <li class="pager-prev"><a>prev</a></li>
                                 <li class="focused"><a>1</a></li>
-                                <li><a>1</a></li>
-                                <li><a>1</a></li>
-                                <li><a>1</a></li>
-                                <li><a>1</a></li>
+                                <li><a>2</a></li>
+                                <li><a>3</a></li>
+                                <li><a>4</a></li>
+                                <li><a>5</a></li>
                                 <li class="pager-next"><a>next</a></li>
                                 <li class="pager-last"><a>last</a></li>
                             </ol>
