--- a/sub_1_3_3.html
+++ b/sub_1_3_3.html
@@ -180,7 +180,7 @@
                             </div>
                         </div>
                         <div class="map-area">
-                            <img src="images/map/map2.png" alt="지도" />
+                            <img src="images/map/map3.png" alt="지도" />
                         </div>
                     </div>
                     <div class="col-4">
@@ -188,7 +188,7 @@
                             <div class="col-3 title-min pr0">관련 육상풍력단지 사업</span>
                             </div>
                             <div class="col-9">
-                                <select class="form-control form-large">
+                                <select class="form-control form-large" disabled>
                                     <option>태백시 가덕산 풍력발전단지 조성사업</option>
                                     <option>태백시 가덕산 풍력발전단지 조성사업</option>
                                     <option>태백시 가덕산 풍력발전단지 조성사업</option>
@@ -216,171 +216,29 @@
                                 <colgroup>
                                     <col style="width:20%;" />
                                     <col style="width:20%;" />
-                                    <col style="width:6.66667%;" />
-                                    <col style="width:6.66667%;" />
-                                    <col style="width:6.66667%;" />
-                                    <col style="width:6.66667%;" />
-                                    <col style="width:6.66667%;" />
-                                    <col style="width:6.66667%;" />
-                                    <col style="width:6.66667%;" />
-                                    <col style="width:6.66667%;" />
-                                    <col style="width:6.66667%;" />                                    
+                                    <col style="width:10%;" />
+                                    <col style="width:10%;" />
+                                    <col style="width:10%;" />
+                                    <col style="width:10%;" />
+                                    <col style="width:10%;" />
+                                    <col style="width:10%;" />
                                 </colgroup>
                                 <thead>
                                     <tr>
-                                        <th scope="col" colspan="2">분야</th>
+                                        <th scope="col" colspan="2">설치위치</th>
                                         <th scope="col" colspan="9">모니터링 지점</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <th rowspan="2" scope="row">자연생태<br />환경</th>
-                                        <td>동물상</td>
-                                        <td class="map-purple">1</td>
-                                        <td class="map-purple">2</td>
-                                        <td class="map-purple">3</td>
-                                        <td class="map-purple">4</td>
-                                        <td>5</td>
-                                        <td>6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
-                                    </tr>
-                                    <tr>
-                                        <td>식물상</td>
-                                        <td>1</td>
-                                        <td>2</td>
-                                        <td>3</td>
-                                        <td>4</td>
-                                        <td>5</td>
-                                        <td>6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
-                                    </tr>
-                                    <tr>
-                                        <th rowspan="3" scope="row">대기<br />환경</th>
-                                        <td>기상</td>
-                                        <td>1</td>
-                                        <td>2</td>
-                                        <td>3</td>
-                                        <td>4</td>
-                                        <td>5</td>
-                                        <td>6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
-                                    </tr>
-                                    <tr>
-                                        <td>대기질</td>
-                                        <td>1</td>
-                                        <td>2</td>
-                                        <td>3</td>
-                                        <td>4</td>
-                                        <td>5</td>
-                                        <td>6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
-                                    </tr>
-                                    <tr>
-                                        <td>온실가스</td>
-                                        <td>1</td>
-                                        <td>2</td>
-                                        <td>3</td>
-                                        <td>4</td>
-                                        <td>5</td>
-                                        <td>6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">수환경</th>
-                                        <td>수질</td>
-                                        <td>1</td>
-                                        <td>2</td>
-                                        <td>3</td>
-                                        <td>4</td>
-                                        <td>5</td>
-                                        <td>6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
-                                    </tr>
-                                    <tr>
-                                        <th rowspan="3" scope="row">토지<br />환경</th>
-                                        <td>토지이용</td>
-                                        <td>1</td>
-                                        <td>2</td>
-                                        <td>3</td>
-                                        <td>4</td>
-                                        <td>5</td>
-                                        <td>6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
-                                    </tr>
-                                    <tr>
-                                        <td>지형/지질</td>
-                                        <td>1</td>
-                                        <td>2</td>
-                                        <td>3</td>
-                                        <td>4</td>
-                                        <td>5</td>
-                                        <td>6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
-                                    </tr>
-                                    <tr>
-                                        <td>토양</td>
-                                        <td>1</td>
-                                        <td>2</td>
-                                        <td>3</td>
-                                        <td>4</td>
-                                        <td>5</td>
-                                        <td>6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
-                                    </tr>
-                                    <tr>
-                                        <th rowspan="3" scope="row">생활<br />환경</th>
+                                        <th rowspan="2" scope="row">생활환경</th>
                                         <td>소음진동</td>
-                                        <td class="map-blue">1</td>
-                                        <td class="map-blue">2</td>
-                                        <td class="map-blue">3</td>
-                                        <td class="map-blue">4</td>
-                                        <td class="map-blue">5</td>
-                                        <td class="map-blue">6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
-                                    </tr>
-                                    <tr>
-                                        <td>전파장해</td>
-                                        <td class="map-yrw">1</td>
-                                        <td class="map-yrw">2</td>
-                                        <td class="map-yrw">3</td>
-                                        <td class="map-yrw">4</td>
-                                        <td class="map-yrw">5</td>
-                                        <td>6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
-                                    </tr>
-                                    <tr>
-                                        <td>친환경적<br />자원순환</td>
                                         <td>1</td>
-                                        <td>2</td>
+                                        <td class="map-blue">2</td>
                                         <td>3</td>
                                         <td>4</td>
                                         <td>5</td>
                                         <td>6</td>
-                                        <td>7</td>
-                                        <td>8</td>
-                                        <td>9</td>
                                     </tr>
                                 </tbody>
                             </table>
